fix: added highlight to contact number for visibility  and recognition

--- a/main.css
+++ b/main.css
@@ -328,6 +328,10 @@ main {
   color: black;
 }
 
+.contact-card a{
+  color: red;
+}
+
 .powered-by {
   display: block;
   margin-top: 0.75rem;
